--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
 <body>
    
   
-    <h1>Hello Shai!</h1>
+
 
     <a href="index2.html" style="text-decoration: none;">
         
         <div class="iyo">
             
-            <p>ANO!?</p>
+            <p>AN0?</p>
+            <h4>(click moq)</h4>
 
         </div>
 
