--- a/index2.html
+++ b/index2.html
@@ -17,7 +17,8 @@
         
         <div class="iyo">
             
-            <p>SAAN?!</p>
+            <p>RAHHH</p>
+            <h4>(click moq)</h4>
 
         </div>
 
