--- a/index3.html
+++ b/index3.html
@@ -17,7 +17,8 @@
         
         <div class="oyi">
             
-            <p>OKAY 😡</p>
+            <p>tinatamad na aq ausin😡</p>
+            <h4>(click moq)</h4>
 
         </div>
 
